--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
 
 <h1>{{survey.title}}</h1>
 <h2>{{survey.instructions}}</h2>
-<form action="/questions/0">
+<form action="/flask-session" method="POST">
   <button>Start</button>
 </form>
 {% endblock %}
